- Add dexie db to store users - Add storage service to wrap the db operations and use that on components - Put all modals on the app to be more center - Add emitter lib to handle event bus - Change some styles - Fix menu button event - Add events to modal

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -29,7 +29,9 @@ body {
   --grey3: #c0c3d2;
   --grey4: #e1e1e1; 
   --light-yellowish-green: #dbff90;
+  --dark1: #2a2d3b;
   --orange-light: #fa7268;
+  --light-pink: #fff3f2;
 }
 
 .new-button {
@@ -42,6 +44,10 @@ body {
   font-size: 0.88rem;
   box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.16), 0 0 0 0.5px rgba(0, 0, 0, 0.08), inset 0 0 0 0.5px rgba(0, 0, 0, 0.08), 0 2px 4px 0.5px rgba(0, 0, 0, 0.16);
   cursor: pointer;
+}
+
+.new-button.minor {
+  padding: 0.5rem 1rem;
 }
 
 .action-button {
@@ -113,4 +119,8 @@ input:not([type="search"]) {
 
 .mb-10 {
   margin-bottom: 1rem;
+}
+
+.text-center {
+  text-align: center;
 }
